Minor code fixes.